# zombie

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
mirofish-kernel/: README.md  pyproject.toml
mirofish-kernel/adapters/graph/: local_graph_store.py  zep_adapter.py
mirofish-kernel/adapters/llm/: anthropic_adapter.py  openai_adapter.py
mirofish-kernel/adapters/memory/: local_memory.py  tiered_memory.py
mirofish-kernel/adapters/simulation/: mock_engine.py  ray_engine.py
mirofish-kernel/api/: fastapi_app.py  ws_manager.py
mirofish-kernel/core/: __init__.py
mirofish-kernel/core/interfaces/: __init__.py  graph_store.py  llm_provider.py  memory_store.py  report_generator.py  simulation_engine.py
mirofish-kernel/core/models/: __init__.py  graph.py  ontology.py  project.py  report.py  simulation.py
mirofish-kernel/core/pipeline/: __init__.py  config_generator.py  graph_builder.py  ontology_designer.py  orchestrator.py  profile_generator.py  report_agent.py  retrieval_tools.py  scenario_engine.py  seed_processor.py  simulation_orchestrator.py
mirofish-kernel/core/storage/: __init__.py  database.py  models.py  repository.py
mirofish-kernel/core/tools/: __init__.py  audit.py  cost_tracker.py  logger.py  multitenancy.py  retry.py  structured_logger.py  text_processor.py
mirofish-kernel/examples/: custom_domain.py  quick_start.py
mirofish-kernel/prompts/ontology/: system_prompt.txt
mirofish-kernel/templates/: __init__.py  module_runner.py  portal_registry.yaml  registry.py  run_all_modules.py
mirofish-kernel/templates/agriculture/: template.yaml
mirofish-kernel/templates/border_patrol/: template.yaml
mirofish-kernel/templates/concert_festival/: template.yaml
mirofish-kernel/templates/counter_uas/: template.yaml
mirofish-kernel/workers/: __init__.py  job_manager.py  pipeline_worker.py
(+121 files in other folders)
