[project]
name = "mirofish-kernel"
version = "1.0.0"
description = "MiroFish Kernel — A reusable Swarm Intelligence Engine for multi-agent simulation and prediction."
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" },
    { name = "RTR / Lam" },
]
readme = "README.md"

# Core: zero-framework, minimal dependencies
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# LLM adapters
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]

# Graph adapters
zep = ["zep-cloud==3.13.0"]

# Simulation adapters
oasis = ["camel-oasis==0.2.5", "camel-ai==0.2.78"]

# File parsing
files = [
    "PyMuPDF>=1.24.0",
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
]

# API frameworks
flask = ["flask>=3.0.0", "flask-cors>=6.0.0"]
fastapi = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]

# All adapters
all = [
    "openai>=1.0.0",
    "zep-cloud==3.13.0",
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    "PyMuPDF>=1.24.0",
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    "python-dotenv>=1.0.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "adapters", "api"]

[tool.hatch.build.targets.wheel.shared-data]
"prompts" = "mirofish_kernel/prompts"

[tool.hatch.build.targets.sdist]
include = ["core", "adapters", "api", "prompts", "examples", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
